# geo

./: .env.example  .gitignore  ARCHITECTURE.md  PROGRESS.md  README.md  docker-compose.yml  start.sh
Docs/SPEC/: 00-ARCHITECTURE_SPEC.md  01-BACKEND_SPEC.md  02-FRONTEND_SPEC.md  03-SCANNER_SPEC.md  04-AI_SERVICE_SPEC.md  05-MONITOR_SPEC.md  06-DATABASE_SCHEMA.md
ai-service/: .env.example  .gitignore  API_DOCS.md  Dockerfile  PROJECT_SUMMARY.md  PROMPT_ENGINEERING.md  QUICKSTART.md  README.md  docker-compose.yml  example_test.py  requirements.txt  start.sh
ai-service/app/: __init__.py  database.py  main.py
backend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  package.json  start-dev.sh
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  index.ts
frontend/: PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
monitor/: .env.example  DATA_MODEL.md  MONITORING_METHOD.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  config.py  example.py  main.py  requirements.txt  start.sh
monitor/database/: __init__.py  db.py  models.py
scanner/: CLI_GUIDE.md  DELIVERY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCORING_ALGORITHM.md  example.py  pyproject.toml  requirements.txt  test_cli.sh
scanner/geo_scanner/: __init__.py  cli.py
scanner/geo_scanner/core/: __init__.py  crawler.py  scheduler.py
scanner/geo_scanner/report/: __init__.py  generator.py
scanner/geo_scanner/scoring/: __init__.py  evaluator.py
(+58 files in other folders)
