[project]
name = "geo-platform-scanner"
version = "1.0.0"
description = "GEO平台内容AI友好度扫描器"
requires-python = ">=3.11"
dependencies = [
    "puppeteer-python>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "scrapy>=2.11.0",
    "pyppeteer>=2.0.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
geo-scanner = "geo_scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
